WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138245
[EFL] Fix the build with EFL 1.12
https://bugs.webkit.org/show_bug.cgi?id=138245
Summary
[EFL] Fix the build with EFL 1.12
Csaba Osztrogonác
Reported
2014-10-31 03:44:11 PDT
EFL 1.12 will be out in 10 days, but the WebKit build is broken with EFL 1.12 beta1 with the folowing error message: In file included from ../../Source/ThirdParty/ANGLE/include/GLSLANG/ShaderLang.h:26:0, from ../../Source/WebCore/platform/graphics/ANGLEWebKitBridge.h:37, from ../../Source/WebCore/platform/graphics/GraphicsContext3D.h:29, from ../../Source/WebCore/platform/graphics/surfaces/GraphicsSurface.h:26, from ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsState.h:43, from ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.h:24, from ../../Source/WebCore/platform/graphics/texmap/coordinated/CompositingCoordinator.h:32, from DerivedSources/WebKit2/include/WebCore/CompositingCoordinator.h:1, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.h:28, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:32: ../../Source/ThirdParty/ANGLE/include/KHR/khrplatform.h:144:17: error: conflicting declaration 'typedef int64_t khronos_int64_t' In file included from ../../Source/WTF/wtf/efl/UniquePtrEfl.h:36:0, from ../../Source/WTF/wtf/RunLoop.h:45, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.h:35, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:30: ../Dependencies/Root/include/evas-1/Evas_GL.h:847:26: error: 'khronos_int64_t' has a previous declaration as 'typedef long long int khronos_int64_t' In file included from ../../Source/ThirdParty/ANGLE/include/GLSLANG/ShaderLang.h:26:0, from ../../Source/WebCore/platform/graphics/ANGLEWebKitBridge.h:37, from ../../Source/WebCore/platform/graphics/GraphicsContext3D.h:29, from ../../Source/WebCore/platform/graphics/surfaces/GraphicsSurface.h:26, from ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsState.h:43, from ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.h:24, from ../../Source/WebCore/platform/graphics/texmap/coordinated/CompositingCoordinator.h:32, from DerivedSources/WebKit2/include/WebCore/CompositingCoordinator.h:1, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.h:28, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:32: ../../Source/ThirdParty/ANGLE/include/KHR/khrplatform.h:145:18: error: conflicting declaration 'typedef uint64_t khronos_uint64_t' In file included from ../../Source/WTF/wtf/efl/UniquePtrEfl.h:36:0, from ../../Source/WTF/wtf/RunLoop.h:45, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.h:35, from ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedDrawingArea.cpp:30: ../Dependencies/Root/include/evas-1/Evas_GL.h:846:28: error: 'khronos_uint64_t' has a previous declaration as 'typedef long long unsigned int khronos_uint64_t' The root of the problem is this commit inside EFL:
https://git.enlightenment.org/core/efl.git/commit/?id=6848cf40b622ee84ca045a138524e868752ce7f5
I'm not sure if it should be fixed in WebKit or in EFL. But it should be fixed somewhere if we would like to use newer EFL in the future.
Attachments
Patch
(6.24 KB, patch)
2014-11-10 20:32 PST
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2014-11-10 20:32:13 PST
Created
attachment 241328
[details]
Patch
Ryuan Choi
Comment 2
2014-11-10 20:36:15 PST
If I am right, Evas_GL.h should not be included along with another GL headers. So, I removed it from UniquePtrEfl.h This changes make not to use UniquePtrEfl for Evas_GL. In addition, I found another build issue like below. /workspace/project/webkit/efl-webkit/Source/WebKit2/UIProcess/API/efl/EwkView.cpp: In member function ‘bool EwkView::createGLSurface()’: /workspace/project/webkit/efl-webkit/Source/WebKit2/UIProcess/API/efl/EwkView.cpp:836:5: error: missing initializer for member ‘_Evas_GL_Config::gles_version’ [-Werror=missing-field-initializers] }; ^ Evas_GL_Config introduced new member, gles_version.
Gyuyoung Kim
Comment 3
2014-11-12 22:26:19 PST
Comment on
attachment 241328
[details]
Patch LGTM.
WebKit Commit Bot
Comment 4
2014-11-12 23:07:16 PST
Comment on
attachment 241328
[details]
Patch Clearing flags on attachment: 241328 Committed
r176066
: <
http://trac.webkit.org/changeset/176066
>
WebKit Commit Bot
Comment 5
2014-11-12 23:07:23 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6
2014-11-19 02:43:29 PST
(In reply to
comment #4
)
> Comment on
attachment 241328
[details]
> Patch > > Clearing flags on attachment: 241328 > > Committed
r176066
: <
http://trac.webkit.org/changeset/176066
>
It made all performance tests fail. The new bug report for this regression:
bug138865
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug